[package]
name = "projects"
version = "0.1.0"
authors = ["Willy Svenningsson <willy@fager.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "stdinserver"
path = "src/stdinserver.rs"

[[bin]]
name = "stdinclient"
path = "src/stdinclient.rs"

[[bin]]
name = "udpserver"
path = "src/udpserver.rs"

[[bin]]
name = "udpclient"
path = "src/udpclient.rs"

[[bin]]
name = "clientandserver"
path = "src/clientandserver.rs"